Fix textarea height on Safari

--- a/site/resources/sass/_cards.scss
+++ b/site/resources/sass/_cards.scss
@@ -48,7 +48,7 @@
         }
 
         .transcription-row {
-            textarea, .speaker > input {
+            .speech, .speaker > input {
                 background: transparent;
                 border-width: 0;
                 box-sizing: content-box;
